syntax = "proto3";

package calculationImc;

option java_multiple_files = true;
option java_package = "com.philips.api.calculation";

message CalculationImc {
  double height = 1;
  double weight = 2;
}

message CalculationImcRequest {
  CalculationImc calc = 1;
}

message CalculationImcResponse {
  double result = 1;
  string Message = 2;
}

service CalculationImcService {
  rpc Calculation (CalculationImcRequest) returns (CalculationImcResponse) {}
}